added new links!

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <img src="img/logo1.png" alt="CyberNetXtreme logo" class="logo">
       <nav>
         <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">Join Us</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="join.html">Join Us</a></li>
         </ul>
       </nav>
     </header>
@@ -31,7 +31,7 @@
         <h1 class="title">&ldquo;At their highest level, all competitive disciplines
           <span>become vehicles for the expression of one's human potential.&rdquo;</span>
         </h1>
-        <a href="" class="button button-accent">JOIN US</a>
+        <a href="join.html" class="button button-accent">JOIN US</a>
       </div>
     </section>
 
@@ -109,7 +109,7 @@
         <h1 class="title title-cta">Like what you see?
           <span>Then what are you waiting for?</span>
         </h1>
-        <a href="#" class="button button-dark">Terjun Masjid</a>
+        <a href="join.html" class="button button-dark">Terjun Masjid</a>
       </div>
     </section>
 
@@ -119,9 +119,9 @@
     <div class="container">
       <nav>
         <ul class="unstyled-list">
-          <li><a href="">Home</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">Join Us</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="join.html">Join Us</a></li>
         </ul>
       </nav>
     </div>
